<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.apidemo.MainActivity$PlaceholderFragment" >
	
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/user_name"/>
	    <EditText
	        android:id="@+id/user_name"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:hint="@string/user_name_hint" />
    </LinearLayout>

     <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/user_pwd"/>
	    <EditText
	        android:id="@+id/user_pwd"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:hint="@string/user_pwd_hint" />
    </LinearLayout>
    
     <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    
	    <Button android:id="@+id/login_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="50dp"
	        android:text="@string/login_btn"
	        android:onClick="doLogin"/>
	    <Button android:id="@+id/reg_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/reg_btn"
	        android:onClick="doRegister"/>
	    
    </LinearLayout>
    

</LinearLayout>
